--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -1,3 +1,39 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+}
+
+.h-section {
+    height: calc(100vh - 5rem);
+}
+
+.rounded-b-16 {
+    border-bottom-left-radius: 4rem;
+    border-bottom-right-radius: 4rem;
+}
+
+.rounded-tl-16 {
+    border-top-left-radius: 4rem;
+}
+
+.h-500 {
+    height: 500px;
+}
